--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 	<script src="contar123.js"></script>
 	<!-- Llamamos a Java"-->
 	<br>
+	<div style="width: 80%; margin: 0 auto;">
 	<a href="https://commons.wikimedia.org/wiki/File:Index_finger_%3D_attention.JPG">Imágenes: Pogrebnoj-Alexandroff</a>, <a href="https://creativecommons.org/licenses/by-sa/3.0">CC BY-SA 3.0</a>, via Wikimedia Commons
-</body>
 </div>
+</body>
 </html>
