--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 	<link rel="icon" href="icon.png" type="image/png">
 </head>
 <body>
+	<header><a href="https://axelcotongutierrez.github.io/learningmathematicas/">
+		<img src="https://axelcotongutierrez.github.io/learningmathematicas/assets/images//top.jpg" alt="Blog Mathematica" style="display: block; margin: 0 auto; width: 100%; height: auto;">
+	  </a></header>
 	<h1>CONTAR HASTA 3</h1>
 	<div class="container2">
 	<span class="textosuperior">¿Eres capaz de contar hasta tres usando los dedos?</span>
