--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>CONTAR HASTA 3</title>
+	<title>JUEGO DE LOS DEDOS</title>
 	<link rel="stylesheet" href="contar123c.css">
 	<link rel="icon" href="icon.png" type="image/png">
 </head>
@@ -11,7 +11,32 @@
 	<header><a href="https://axelcotongutierrez.github.io/learningmathematicas/">
 		<img src="https://axelcotongutierrez.github.io/learningmathematicas/assets/images//top.jpg" alt="Blog Mathematica" style="display: block; margin: 0 auto; width: 100%; height: auto;">
 	  </a></header>
-	<h1>CONTAR HASTA 3</h1>
+	  <center> 
+		<table >
+		<tr>
+			<td valign="middle">
+				<div style="text-align: center;">
+					<h1>JUEGO DE LOS DEDOS</h1>
+					</div>
+			</td>
+			<td valign="middle">
+				<div style="text-align: center;">
+					<a title="Matemáticas" href="/learningmathematicas/assets/images/pages/figuras/Matematicas.png">
+					  <img class="center-block img-responsive" width="50" alt="Matemáticas" src="/learningmathematicas/assets/images/pages/figuras/Matematicas.png">
+					</a>
+					</div>
+			</td>
+			<td valign="middle">
+				<div style="text-align: center;">
+					<a title="Infantil" href="/learningmathematicas/assets/images/pages/figuras/infantil.png">
+					  <img class="center-block img-responsive" width="50" alt="Infantil" src="/learningmathematicas/assets/images/pages/figuras/infantil.png">
+					</a>
+					</div>
+			</td>
+			
+		</tr>
+	  </table></center>
+	
 	<div class="container2">
 	<span class="textosuperior">¿Eres capaz de contar hasta tres usando los dedos?</span>
 	<button id="play-again-button" style="display: none;">Volver a jugar</button>
