--- a/index.html
+++ b/index.html
@@ -11,32 +11,15 @@
 	<header><a href="https://axelcotongutierrez.github.io/learningmathematicas/">
 		<img src="https://axelcotongutierrez.github.io/learningmathematicas/assets/images//top.jpg" alt="Blog Mathematica" style="display: block; margin: 0 auto; width: 100%; height: auto;">
 	  </a></header>
-	  <center> 
-		<table >
-		<tr>
-			<td valign="middle">
-				<div style="text-align: center;">
-					<h1>JUEGO DE LOS DEDOS</h1>
-					</div>
-			</td>
-			<td valign="middle">
-				<div style="text-align: center;">
-					<a title="Matemáticas" href="/learningmathematicas/assets/images/pages/figuras/Matematicas.png">
-					  <img class="center-block img-responsive" width="50" alt="Matemáticas" src="/learningmathematicas/assets/images/pages/figuras/Matematicas.png">
-					</a>
-					</div>
-			</td>
-			<td valign="middle">
-				<div style="text-align: center;">
-					<a title="Infantil" href="/learningmathematicas/assets/images/pages/figuras/infantil.png">
-					  <img class="center-block img-responsive" width="50" alt="Infantil" src="/learningmathematicas/assets/images/pages/figuras/infantil.png">
-					</a>
-					</div>
-			</td>
-			
-		</tr>
-	  </table></center>
-	
+	  
+	  <h1 style="text-align: center;">JUEGO DE LOS DEDOS</h1>
+	  
+	  <p class="textosuperior" style="text-align: center;">Este contenido se vincula con el 
+		<b><a href="https://axelcotongutierrez.github.io/learningmathematicas/projects/Niveles/#level-1-detail" target="_blank">Nivel 1</a></b>
+		 de la materia <a title="Matemáticas" href="https://axelcotongutierrez.github.io/learningmathematicas/tags/?tag=matemáticas" target="_blank"><img class="center-block img-responsive" width="40" alt="Matemáticas" src="/learningmathematicas/assets/images/pages/figuras/Matematicas.png"></a>
+		 y es pertinente al curso <a title="Infantil" href="https://axelcotongutierrez.github.io/learningmathematicas/tags/?tag=infantil" target="_blank"><img class="center-block img-responsive" style="display: inline-block;" width="40" alt="Infantil" src="/learningmathematicas/assets/images/pages/figuras/infantil.png"></a>
+		</p>
+	  <br>
 	<div class="container2">
 	<span class="textosuperior">¿Eres capaz de contar hasta tres usando los dedos?</span>
 	<button id="play-again-button" style="display: none;">Volver a jugar</button>
