--- a/index.html
+++ b/index.html
@@ -5,15 +5,37 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>JUEGO DE LOS DEDOS</title>
 	<link rel="stylesheet" href="contar123c.css">
+	<link rel="stylesheet" href="nav.css">
 	<link rel="icon" href="icon.png" type="image/png">
 </head>
 <body>
-	<header><a href="https://axelcotongutierrez.github.io/learningmathematicas/">
-		<img src="https://axelcotongutierrez.github.io/learningmathematicas/assets/images//top.jpg" alt="Blog Mathematica" style="display: block; margin: 0 auto; width: 100%; height: auto;">
-	  </a></header>
+	<header>
+		<div class="menu">
+			<button class="menu-toggle">☰</button>
+			<ul><li><a href="https://axelcotongutierrez.github.io/learningmathematicas/">
+				<img src="cb.jpg"> 
+			</a></li>
+				<li><a href="/learningmathematicas/projects/Cursos/">Cursos y Materias</a></li>
+				<li><a href="/learningmathematicas/projects/Niveles/">Niveles</a></li>
+				<li><a href="/learningmathematicas/">Entradas</a></li>
+				<li><a href="/learningmathematicas/tags">Etiquetas</a></li>
+				<li><a href="/learningmathematicas/about">Blog</a></li>
+				<li><a href="#">Utilidades</a>
+					<ul>
+						<li><a href="/learningmathematicas/projects/Utilidades/Glosario.html">Glosario</a></li>
+						<li><a href="/learningmathematicas/projects/Utilidades/Programacion.html">Programación</a></li>
+						<li><a href="/learningmathematicas/projects/Utilidades/Soroban.html">Soroban</a></li>
+					</ul>
+				</li>
+			</ul>
+		</div>
+		<a href="https://axelcotongutierrez.github.io/learningmathematicas/">
+			<img src="https://axelcotongutierrez.github.io/learningmathematicas/assets/images//top.jpg" alt="Blog Mathematica" style="display: block; margin: 0 auto; width: 100%; height: auto;">
+		  </a>
+		  <h1 style="text-align: center;">JUEGO DE LOS DEDOS</h1>
+		</header>
 	  
-	  <h1 style="text-align: center;">JUEGO DE LOS DEDOS</h1>
-	  
+	    
 	  <p class="textosuperior" style="text-align: center;">Este contenido se vincula con el 
 		<b><a href="https://axelcotongutierrez.github.io/learningmathematicas/projects/Niveles/#level-1-detail" target="_blank">Nivel 1</a></b>
 		 de la materia <a title="Matemáticas" href="https://axelcotongutierrez.github.io/learningmathematicas/tags/?tag=matemáticas" target="_blank"><img class="center-block img-responsive" width="40" alt="Matemáticas" src="/learningmathematicas/assets/images/pages/figuras/Matematicas.png"></a>
@@ -21,7 +43,7 @@
 		</p>
 	  <br>
 	<div class="container2">
-	<span class="textosuperior">¿Eres capaz de contar hasta tres usando los dedos?</span>
+	<span class="pregunta">¿Eres capaz de contar hasta tres usando los dedos?</span>
 	<button id="play-again-button" style="display: none;">Volver a jugar</button>
 	</div>
 	<div class="container">
@@ -41,7 +63,7 @@
 			 </span>
 		</div>
 		
-	</div>
+	
 	
 	<script src="contar123.js"></script>
 	<!-- Llamamos a Java"-->
@@ -49,5 +71,12 @@
 	<div style="width: 80%; margin: 0 auto;">
 	<a href="https://commons.wikimedia.org/wiki/File:Index_finger_%3D_attention.JPG">Imágenes: Pogrebnoj-Alexandroff</a>, <a href="https://creativecommons.org/licenses/by-sa/3.0">CC BY-SA 3.0</a>, via Wikimedia Commons
 </div>
+<br>
+	<footer class="footer">
+		<ul class="footer-links">
+			<li><a href="http://github.com/AxelCotonGutierrez"> <img src="githubinverseicon.jpg"></a></li>
+			<li><a href="https://www.youtube.com/@learningmathematicas"> <img src="youtubeinverseicon.jpg"></i></a></li>
+		</ul>
+	</footer>
 </body>
 </html>
