--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	  <p class="textosuperior" style="text-align: center;">Este contenido se vincula con el 
 		<b><a href="https://axelcotongutierrez.github.io/learningmathematicas/projects/Niveles/#level-1-detail" target="_blank">Nivel 1</a></b>
 		 de la materia <a title="Matemáticas" href="https://axelcotongutierrez.github.io/learningmathematicas/tags/?tag=matemáticas" target="_blank"><img class="center-block img-responsive" width="30" alt="Matemáticas" src="/learningmathematicas/assets/images/pages/figuras/Matematicas.png"></a>
-		 y es pertinente al curso <a title="Infantil" href="https://axelcotongutierrez.github.io/learningmathematicas/tags/?tag=infantil" target="_blank"><img class="center-block img-responsive" style="display: inline-block;" width="30" alt="Infantil" src="/learningmathematicas/assets/images/pages/figuras/infantil.png"></a>
+		 y es perteneciente al curso <a title="Infantil" href="https://axelcotongutierrez.github.io/learningmathematicas/tags/?tag=infantil" target="_blank"><img class="center-block img-responsive" style="display: inline-block;" width="30" alt="Infantil" src="/learningmathematicas/assets/images/pages/figuras/infantil.png"></a>
 		</p>
 	  <br>
 	<div class="container2">
