--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
 		</p>
 	  <br>
 	<div class="container2">
-	<span class="pregunta">¿Eres capaz de contar hasta tres usando los dedos?</span>
+	<span class="pregunta">¿Eres capaz de contar los dedos que están levantados?</span>
+	<div id="audio-controls">
+		<img src="img/Megafono.png" id="megaphone-icon" alt="Megáfono">
+		
+	  </div>
 	<button id="play-again-button" style="display: none;">Volver a jugar</button>
 	</div>
 	<div class="container">
@@ -63,7 +67,12 @@
 					
 			 </span>
 		</div>
-		
+		<label for="sound-control">Sonido:</label>
+		<input type="checkbox" id="sound-control" checked>
+		<p class="textosuperior" style="text-align: center;"> 
+			<b><a href="" target="_blank">¿Cómo jugar?</a></b>
+			
+			</p>
 	
 	
 	<script src="contar123.js"></script>
