--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		</p>
 	  <br>
 	<div class="container2">
-	<span class="pregunta">¿Eres capaz de contar los dedos que están levantados?</span>
+	<span class="pregunta">¿Eres capaz de contar los dedos que están levantados cinco veces sin equivocarte?</span>
 	<div id="audio-controls">
 		<img src="img/Megafono.png" id="megaphone-icon" alt="Megáfono">
 		
