--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 		<label for="sound-control">Sonido:</label>
 		<input type="checkbox" id="sound-control" checked>
 		<p class="textosuperior" style="text-align: center;"> 
-			<b><a href="" target="_blank">¿Cómo jugar?</a></b>
+			<b><a href="https://youtu.be/9VVgQLEwNWo?si=W7YN_yOzSjrBpTIp" target="_blank">¿Cómo jugar?</a></b>
 			
 			</p>
 	
