--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
 
 	<script>
-		// Configuración de Firebase proporcionada
+		// Configuración de Firebase
 		const firebaseConfig = {
 			apiKey: "AIzaSyAE3Un38AeJrWtH83ndmXLNSKKFoKQI7K8",
 			authDomain: "contador-de-juegos.firebaseapp.com",
