--- a/index.html
+++ b/index.html
@@ -8,28 +8,9 @@
 	<link rel="stylesheet" href="nav.css">
 	<link rel="icon" href="icon.png" type="image/png">
 	<script src="https://axelcotongutierrez.github.io/learningmathematicas/assets/js/header.js"></script>
+	<script src="https://axelcotongutierrez.github.io/learningmathematicas/assets/js/contador.js"></script>
 
-	<!-- Incluimos las bibliotecas de Firebase -->
-	<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-	<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
-
-	<script>
-		// Configuración de Firebase
-		const firebaseConfig = {
-			apiKey: "AIzaSyAE3Un38AeJrWtH83ndmXLNSKKFoKQI7K8",
-			authDomain: "contador-de-juegos.firebaseapp.com",
-			databaseURL: "https://contador-de-juegos-default-rtdb.europe-west1.firebasedatabase.app",
-			projectId: "contador-de-juegos",
-			storageBucket: "contador-de-juegos.appspot.com",
-			messagingSenderId: "811452306589",
-			appId: "1:811452306589:web:c0ceaada6ebdebb6d27074",
-			measurementId: "G-QGKEEYVRTR"
-		};
-
-		// Inicializar Firebase
-		firebase.initializeApp(firebaseConfig);
-		const database = firebase.database();
-	</script>
+	
 </head>
 <body>
 	<header>
