--- a/index.html
+++ b/index.html
@@ -60,11 +60,6 @@
 		<a href="https://commons.wikimedia.org/wiki/File:Index_finger_%3D_attention.JPG">Imágenes: Pogrebnoj-Alexandroff</a>, <a href="https://creativecommons.org/licenses/by-sa/3.0">CC BY-SA 3.0</a>, via Wikimedia Commons
 	</div>
 	<br>
-	<footer class="footer">
-		<ul class="footer-links">
-			<li><a href="http://github.com/AxelCotonGutierrez"> <img src="githubinverseicon.jpg"></a></li>
-			<li><a href="https://www.youtube.com/@learningmathematicas"> <img src="youtubeinverseicon.jpg"></i></a></li>
-		</ul>
-	</footer>
+	<div id="footer-placeholder"></div>
 </body>
 </html>
