--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="nav.css">
 	<link rel="icon" href="icon.png" type="image/png">
 	<script src="https://axelcotongutierrez.github.io/learningmathematicas/assets/js/header.js"></script>
+	<script src="https://axelcotongutierrez.github.io/learningmathematicas/assets/js/footer.js"></script>
 	<!-- Incluir las bibliotecas de Firebase -->
 	<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>	
