--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>JUEGO DE LOS DEDOS</title>
 	<link rel="stylesheet" href="contar123c.css">
-	<link rel="stylesheet" href="nav.css">
+	<link rel="stylesheet" href="https://axelcotongutierrez.github.io/learningmathematicas/assets/css/nav.css">
 	<link rel="icon" href="icon.png" type="image/png">
 	<script src="https://axelcotongutierrez.github.io/learningmathematicas/assets/js/header.js"></script>
 	<script src="https://axelcotongutierrez.github.io/learningmathematicas/assets/js/footer.js"></script>
